@@ -507,7 +507,7 @@ Table_ClearCmd(ClientData clientData, register Tcl_Interp *interp,
 	}
 
 	if (cmdIndex == CLEAR_CACHE || cmdIndex == CLEAR_ALL) {
-	    Tcl_DeleteHashTable(tablePtr->cache);
+	    Table_ClearHashTable(tablePtr->cache);
 	    Tcl_InitHashTable(tablePtr->cache, TCL_STRING_KEYS);
 	    /* If we were caching and we have no other data source,
 	     * invalidate all the cells */
@@ -519,7 +519,7 @@ Table_ClearCmd(ClientData clientData, register Tcl_Interp *interp,
     } else {
 	int row, col, r1, r2, c1, c2;
 	Tcl_HashEntry *entryPtr;
-	char buf[INDEX_BUFSIZE];
+	char buf[INDEX_BUFSIZE], *value;
 
 	if (TableGetIndexObj(tablePtr, objv[3], &row, &col) != TCL_OK ||
 	    ((objc == 5) &&
@@ -587,6 +587,8 @@ Table_ClearCmd(ClientData clientData, register Tcl_Interp *interp,
 
 		if ((cmdIndex == CLEAR_CACHE || cmdIndex == CLEAR_ALL) &&
 		    (entryPtr = Tcl_FindHashEntry(tablePtr->cache, buf))) {
+		    value = (char *) Tcl_GetHashValue(entryPtr);
+		    if (value) { ckfree(value); }
 		    Tcl_DeleteHashEntry(entryPtr);
 		    /* if the cache is our data source,
 		     * we need to invalidate the cells changed */
