@@ -1,3 +1,11 @@
+2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkTable.c:
+	* generic/tkTable.h:
+	* generic/tkTableCmds.c:
+	* generic/tkTableUtil.c: cleaned up several areas where cache data
+	was not getting freed. [Bug #532447] (bloisi)
+
 2002-03-19  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/tkTable.test: added tag configure tests
